# CamaraPSAP

./: .dockerignore  .env.example  AUTHORIZATION.md  DATABASE_SCHEMA.md  Dockerfile  PROJECT_SUMMARY.md  README.md  camarapsap.db  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_authorization.py  test_jwt_simple.py  test_oauth_flow.py
api_definitions/: CAMARA_common.yaml  device_identifier.yaml  location_retrieval.yaml  location_verification.yaml
src/camarapsap/: __init__.py  config.py  dependencies.py  device_identifier.py  example_auth_integration.py  location_retrieval.py  location_verification.py  main.py  oauth.py
src/camarapsap/db/: __init__.py  database.py  init_db.py
src/camarapsap/db/models/: __init__.py  client.py  device.py  device_ppid.py  location.py
src/camarapsap/models/: __init__.py
src/camarapsap/models/auth/: __init__.py  oauth_responses.py  token.py
src/camarapsap/models/common/: __init__.py  coordinates.py  device.py  device_ipv4.py  device_ipv6.py  error.py  network_access_identifier.py  phone_number.py  point.py  point_list.py  port.py  single_ipv4.py  time_period.py  x_correlator.py
src/camarapsap/models/device_identifier/: __init__.py  models.py
src/camarapsap/models/error_models/: __init__.py  camara_errors.py
src/camarapsap/models/location_retrieval/: __init__.py  models.py
src/camarapsap/models/location_verification/: __init__.py  models.py
src/camarapsap/services/: __init__.py  authorization.py  client.py  identifier.py  location.py
tests/: test_main.py
